# graph_skeletonizer

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  test_graph.txt
include/: boruvka_method.hpp  graph.hpp
lib/: CMakeLists.txt
lib/include/: boruvka_method.hpp  graph.hpp  graph_generator.hpp  kruskal_method.hpp  prim_method.hpp  random_spanning_tree.hpp  sets_separator.hpp  skeleton.hpp
lib/src/: boruvka_method.cpp  graph.cpp  graph_generator.cpp  kruskal_method.cpp  prim_method.cpp  random_spanning_tree.cpp  sets_separator.cpp  skeleton.cpp
src/: boruvka_method.cpp  graph.cpp  main.cpp  skeleton.cpp
test/: CMakeLists.txt  graph_test.cpp  kruskal_method_test.cpp  macros.hpp  methods_test.cpp  optimal_methods_test.cpp  prim_method_test.cpp  random_spanning_tree_test.cpp  spanning_tree_test.cpp
tools/: CMakeLists.txt  main.cpp
tools/scripts/: fix_nodes_var_edges.py  fix_nodes_var_max_w_linear.py  fix_nodes_var_max_w_max_edges.py  plot_var_edges.py  plot_var_nodes_var_edges.py  run_experiments.py  var_nodes_linear_edges.py  var_nodes_max_edges.py
